# sigma

./: CMakeLists.txt  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
examples/: arrays.sigma  errors.sigma  hello.sigma  minimal.sigma  simple.sigma  test.sigma
packaging/: PKGBUILD  build-deb.sh  install.ps1  install.sh  sigma.json
packaging/debian/: control  postinst
src/: main.cpp
src/ast/: AST.h  ASTPrinter.h
src/codegen/: CodeGen.cpp  CodeGen.h
src/lexer/: Lexer.cpp  Lexer.h  Token.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: SymbolTable.h  TypeChecker.cpp  TypeChecker.h  Types.h
src/utils/: Error.h
tests/: LexerTests.cpp  ParserTests.cpp  TestFramework.h  main.cpp
